--- a/q/229683.html
+++ b/q/229683.html
@@ -26,22 +26,22 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>027</td><td>Wolfram Language Mathematica</td><td>210615T194913Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229762#229762">att</a></td></tr>
-<tr d-ix="1"><td>037</td><td>Arturo</td><td>230214T114459Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/257810#257810">chunes</a></td></tr>
-<tr d-ix="2"><td>010</td><td>Nibbles</td><td>230126T125550Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/257095#257095">xigoi</a></td></tr>
-<tr d-ix="3"><td>044</td><td>Risky</td><td>210615T025934Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229694#229694">rydwolf</a></td></tr>
-<tr d-ix="4"><td>074</td><td>Java OpenJDK 8</td><td>210707T171444Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/231091#231091">branboye</a></td></tr>
-<tr d-ix="5"><td>018</td><td>8086 machine code</td><td>210615T025220Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229693#229693">EasyasPi</a></td></tr>
-<tr d-ix="6"><td>030</td><td>Julia</td><td>210617T130039Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229907#229907">MarcMush</a></td></tr>
-<tr d-ix="7"><td>055</td><td>Python 3</td><td>210617T083411Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229898#229898">Olupo</a></td></tr>
-<tr d-ix="8"><td>021</td><td>Raku</td><td>210617T072305Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229897#229897">Jo King</a></td></tr>
-<tr d-ix="9"><td>006</td><td>Jelly</td><td>210615T070234Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229707#229707">xigoi</a></td></tr>
-<tr d-ix="10"><td>011</td><td>Pip p</td><td>210616T211409Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229859#229859">DLosc</a></td></tr>
-<tr d-ix="11"><td>038</td><td>Haskell</td><td>210616T104807Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229822#229822">lynn</a></td></tr>
-<tr d-ix="12"><td>008</td><td>Jelly</td><td>210615T012459Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229688#229688">caird co</a></td></tr>
-<tr d-ix="13"><td>028</td><td>PowerShell Core</td><td>210615T033501Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229696#229696">Julian</a></td></tr>
-<tr d-ix="14"><td>052</td><td>C clang</td><td>210615T033532Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229698#229698">a stone </a></td></tr>
-<tr d-ix="15"><td>027</td><td>Perl 5 ap</td><td>210615T185117Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229760#229760">Nahuel F</a></td></tr>
+<tr d-ix="0"><td>021</td><td>Perl 5 ap</td><td>210615T185117Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229760#229760">Nahuel F</a></td></tr>
+<tr d-ix="1"><td>027</td><td>Wolfram Language Mathematica</td><td>210615T194913Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229762#229762">att</a></td></tr>
+<tr d-ix="2"><td>037</td><td>Arturo</td><td>230214T114459Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/257810#257810">chunes</a></td></tr>
+<tr d-ix="3"><td>010</td><td>Nibbles</td><td>230126T125550Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/257095#257095">xigoi</a></td></tr>
+<tr d-ix="4"><td>044</td><td>Risky</td><td>210615T025934Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229694#229694">rydwolf</a></td></tr>
+<tr d-ix="5"><td>074</td><td>Java OpenJDK 8</td><td>210707T171444Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/231091#231091">branboye</a></td></tr>
+<tr d-ix="6"><td>018</td><td>8086 machine code</td><td>210615T025220Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229693#229693">EasyasPi</a></td></tr>
+<tr d-ix="7"><td>030</td><td>Julia</td><td>210617T130039Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229907#229907">MarcMush</a></td></tr>
+<tr d-ix="8"><td>055</td><td>Python 3</td><td>210617T083411Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229898#229898">Olupo</a></td></tr>
+<tr d-ix="9"><td>021</td><td>Raku</td><td>210617T072305Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229897#229897">Jo King</a></td></tr>
+<tr d-ix="10"><td>006</td><td>Jelly</td><td>210615T070234Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229707#229707">xigoi</a></td></tr>
+<tr d-ix="11"><td>011</td><td>Pip p</td><td>210616T211409Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229859#229859">DLosc</a></td></tr>
+<tr d-ix="12"><td>038</td><td>Haskell</td><td>210616T104807Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229822#229822">lynn</a></td></tr>
+<tr d-ix="13"><td>008</td><td>Jelly</td><td>210615T012459Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229688#229688">caird co</a></td></tr>
+<tr d-ix="14"><td>028</td><td>PowerShell Core</td><td>210615T033501Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229696#229696">Julian</a></td></tr>
+<tr d-ix="15"><td>052</td><td>C clang</td><td>210615T033532Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229698#229698">a stone </a></td></tr>
 <tr d-ix="16"><td>012</td><td>Charcoal</td><td>210615T094847Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229730#229730">Neil</a></td></tr>
 <tr d-ix="17"><td>043</td><td>Retina 0.8.2</td><td>210615T094016Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229728#229728">Neil</a></td></tr>
 <tr d-ix="18"><td>006</td><td>05AB1E</td><td>210615T063218Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229702#229702">ovs</a></td></tr>
@@ -62,18 +62,25 @@
 <tr d-ix="33"><td>015</td><td>Jelly</td><td>210615T011811Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229686#229686">hyper-ne</a></td></tr>
 <tr d-ix="34"><td>029</td><td>JavaScript ES6</td><td>210615T010425Z</td><td><a href="https://codegolf.stackexchange.com/questions/229683/mr-binary-counterman/229685#229685">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>29</s> 27 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> (<code>-ap</code>), <s>27</s> 21 bytes</h1>
+<p>6 bytes saved thanks to @Xcali</p>
+
+<pre class="lang-perl prettyprint-override"><code>s/\d/$&amp;+$c[$&amp;]++*2/ge
+</code></pre>
+<p><a href="https://tio.run/##K0gtyjH9/79YPyZFX0VNWyU5WkUtVltby0g/PfX/fwMFAwVDBTD5L7@gJDM/r/i/bgEA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>29</s> 27 bytes</h1>
 <pre><code>a[[#]]+=2&amp;/@+(a=0?-1;-1)^#&amp;
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7PzE6Wjk2VtvWSE3fQVsj0dbAXtfQWtdQM05Z7X9AUWZeSbSyrl2ag3KsWl1wcmJeXTVXtaGOgQ4U1@qAuGAIYhrogCGEaQhWhMqB6oMrhgnChMDmIQyFmMZV@x8A" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 <p>Boring answer. Mathematica's modified assignment operators (e.g. <code>+=</code>) have higher precedence than its assignment operators (e.g. <code>=</code>). It so happens that <code>Function</code> (<code>&amp;</code>)'s precedence falls in between, so modified assignment doesn't need parentheses inside <code>&amp;</code>. (<code>//=</code> is slightly different from both groups).</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 37 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 37 bytes</h1>
 <pre class="lang-arturo prettyprint-override"><code>$=&gt;[p:[2,1]map&amp;'x[n:p\[x]p\[x]:n+2n]]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?YMTOgM" rel="nofollow noreferrer">Try it</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 10 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 10 bytes</h1>
 <pre><code>/$^0_:$.@+*-~%-$@~~
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWm_VV4gzirVT0HLS1dOtUdVUc6uogMlAFG6OVog11DHUMgBBIxirFQiUA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -101,7 +108,7 @@ $          the number in the accumulator
        the number in the accumulator
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Radvylf/risky" rel="nofollow noreferrer">Risky</a>, 44 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Radvylf/risky" rel="nofollow noreferrer">Risky</a>, 44 bytes</h1>
 <pre><code>__0+0+_0+0+__0+0+_0+0+__0+0+_0+0+__0+0+_0+?1__0+0+_0+0+__0+0+_0!-_0!_{1+_0+0_[2_{0+__{1
 </code></pre>
 <p><a href="https://radvylf.github.io/risky?p=WyJfXzArMCtfMCswICsgX18wKzArXzArMCArIF9fMCswK18wKzAgKyBfXzArMCtfMCs_XG4gICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgIDFcbl9fMCswK18wKzAgKyBfXzArMCtfMCEtIF8gMCFfezErXzArMCBfIFsyX3swK19fezEiLCJbWzEsIDAsIDEsIDEsIDBdXSIsMF0" rel="nofollow noreferrer">Try it online!</a></p>
@@ -122,13 +129,13 @@ $          the number in the accumulator
 <p>Risky has an operator called &quot;map pairs&quot; which takes an array, and maps the items according to a set of rules. The rules are arrays, starting with the item to be replaced, and with (typically) one item to map to. However, if multiple are specified, they'll be used in order.</p>
 <p>This answer generates those mappings, which look like <code>[[0, 2, 4, 6, ...], [1, 1, 3, 5, 7, ...]]</code>. It does this by mapping <code>[0, -1]</code> to <code>[2_{0+__{1</code> over a range <code>[0, x)</code>, which is essentially <code>(x, n) =&gt; abs(2 * x + n)</code>, where <code>x</code> is the number in the range and <code>n</code> is either <code>0</code> or <code>-1</code>.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="http://openjdk.java.net/" rel="nofollow noreferrer">Java (OpenJDK 8)</a>, 74 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="http://openjdk.java.net/" rel="nofollow noreferrer">Java (OpenJDK 8)</a>, 74 bytes</h1>
 
 <pre class="lang-java prettyprint-override"><code>a-&gt;{for(int c=0,i=-1,j=0;c&lt;a.length;)a[c]=a[c++]==1?i+=2:(j+=2);return a;}
 </code></pre>
 <p><a href="https://tio.run/##VVBNb4MwDD2HX@EjqDSCHcuyrZdJPezUY9WDR9MujCYoMZ0qxG9n5qOTJsuO8/Ly5OcKb7h2jbbV6Xsw18Z5goox2ZKp5dZ7vIciipr2szYllDWGAB9oLHSRiMQCB0Li4@bMCa78GO/JG3s5HAH9JSQjV5ydh9hYYpB0INiA1T8wAQx1XZ5m6ZJ9yrcpuMvSKaYunxj/@uXPg/nAFmRU@lObdfqEhxH7eyB9la4l2fCoVNt49irJzcPHW2nicdIkSXgBoud8e29tScZZrHeWtD9jqXkJ3tyQ9OhlhmA3OZ7NmsU0ssooEollWzvYghpw/dLxakYSlCpLjVrnaaWyonxGWWt7oa8iwUN5VFxWq6NS@atZqadNXHFNCq@p9Raw6AdRRP3wCw" rel="nofollow noreferrer" title="Java (OpenJDK 8) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1>8086 machine code, <s>21</s> 18 bytes</h1>
+<div id="pu6" class="pu"><h1>8086 machine code, <s>21</s> 18 bytes</h1>
 <pre><code>00000000: b0 01 b2 02 d1 eb 72 01 92 aa 40 40 72 01 92 e2  ......r...@@r...
 00000010: f3 c3                                            ..
 </code></pre>
@@ -181,27 +188,27 @@ mrbitctr:
 <li>3 bytes: swap twice</li>
 </ul>
 </div>
-<div id="pu6" class="pu"><h1><a href="http://julialang.org/" rel="nofollow noreferrer">Julia</a>, <sup><s>33</s></sup> 30 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="http://julialang.org/" rel="nofollow noreferrer">Julia</a>, <sup><s>33</s></sup> 30 bytes</h1>
 
 <pre class="lang-julia prettyprint-override"><code>f(x,y=[0,-1])=x.|&gt;i-&gt;y[i+1]+=2
 </code></pre>
 <p><a href="https://tio.run/##VU7RCsMgDHzPV@RRqR1m7/ZHxIfBKjiKG20GFvrvrnV1wxyBu@Ny5PGewo1Szl4ktRqrVU9OmnTZhtAPqw0duc5cM48LL2hQgCXUeK5Thyw4qMaCL6USasV59wtXs1ql719a2ySAf87IGCKWRwD3ec0h8hQFy0b63WgdCWO85w8" rel="nofollow noreferrer" title="Julia 1.0 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <s>57</s> 55 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <s>57</s> 55 bytes</h1>
 <pre><code>v = [2,1]
 for i in map(int,input()):print(v[i]);v[i]+=2
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM/7/v0zBViHaSMcwlistv0ghUyEzTyE3sUAjM69EJzOvoLREQ1PTqqAIyNUoi86M1bQGkdq2Rv//GxoYGBoaGBoAAA" rel="nofollow noreferrer">Try it online!</a></p>
 <p>2 bytes less thanks to AviFS</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/nxadm/rakudo-pkg" rel="nofollow noreferrer">Raku</a>, 21 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/nxadm/rakudo-pkg" rel="nofollow noreferrer">Raku</a>, 21 bytes</h1>
 
 <pre class="lang-perl6 prettyprint-override"><code>*&gt;&gt;.&amp;{(%.{$_}+=2)-$_}
 </code></pre>
 <p><a href="https://tio.run/##TU7LDoJADLz3K@aAPFQIuyDgAX7FYISEiGBAYwjh27Hs4iOT3abT6XTuRVdH822AWSKdt1nmmaO98UbjNO1S6bhc57LtYNdVU/QO3AxG1exhtM8H/@c6b66pZWGkPh9Q2jz0Xm13YWmaKRVNs4CP9ZGARIAQB0TEjQLXgImYyIcCSVZESBZCqNWFEmox@iNXV/Ebsk2CGEdt9RFpSciVTb@3SHICxhpDX9ZR1P03" rel="nofollow noreferrer" title="Perl 6 – Try It Online">Try it online!</a></p>
 <p>Maps each element to the index into an anonymous hash, incrementing that value by two (initially zero), and finally subtracting the element itself to distinguish between odd and even.This could also be extended to values beyond 0 and 1 simply by changing the <code>2</code> to another number.</p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>7</s> 6 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>7</s> 6 bytes</h1>
 <pre><code>ċṪ$ƤḤ+
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8//9I98Odq1SOLXm4Y4n2////ow10DIHQQMcATALZsQA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -217,7 +224,7 @@ for i in map(int,input()):print(v[i]);v[i]+=2
      + Add the original list
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a> <code>-p</code>, 11 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a> <code>-p</code>, 11 bytes</h1>
 <pre><code>{a?vi+:2}Ma
 </code></pre>
 <p>Takes input as a single string of 1's and 0's on the command-line. <a href="https://tio.run/##K8gs@P@/OtG@LFPbyqjWN/H///@6Bf8NDQ0MDA0A" rel="nofollow noreferrer" title="Pip – Try It Online">Try it online!</a></p>
@@ -235,7 +242,7 @@ for i in map(int,input()):print(v[i]);v[i]+=2
 <li>If it is 1, increment <code>v</code> by 2 and return it (giving values 1, 3, 5, ...)</li>
 </ul>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 38 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 38 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>f(h:t)=h:f[x+mod(x-h-1)2*2|x&lt;-t]
 f e=e
@@ -252,7 +259,7 @@ f e=e
 = [1,3,0,2,5,4]
 </code></pre>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
+<div id="pu13" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
 <pre><code>,CÄḤ×ƊS_
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/1/H@XDLwx1LDk8/1hUc//9w@9FJD3fO0Iz8/z/aUEfBQEcBQcbqKIDEoAjEMwDLGUCZhjDFmAJIxiBpRJaEy4BtQbEKZgsA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -269,7 +276,7 @@ f e=e
        _ - Subtract B, elementwise
 </code></pre>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell Core</a>, 28 bytes</h1>
+<div id="pu14" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell Core</a>, 28 bytes</h1>
 
 <pre class="lang-powershell prettyprint-override"><code>$b=0,-1;$args|%{($b[$_]+=2)}
 </code></pre>
@@ -289,7 +296,7 @@ Returns a list of integers</p>
 1{$o++*2+1}}   # if it is 1, output an odd number, starting from 1
 </code></pre>
 </div>
-<div id="pu14" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 52 bytes</h1>
+<div id="pu15" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 52 bytes</h1>
 <p>-1 thanks to <a href="https://codegolf.stackexchange.com/users/84844/aztecco">@AZTECCO</a>, by using clang instead of gcc.</p>
 
 <pre class="lang-c prettyprint-override"><code>f(a,l)int*a;{for(int b[]={0,-1};l--;)*a++=b[*a]+=2;}
@@ -301,12 +308,6 @@ Returns a list of integers</p>
 <pre class="lang-c prettyprint-override"><code>f(a,l)int*a;{for(int b[]={0,-1};l--;a++)*a=b[*a]+=2;}
 </code></pre>
 <p><a href="https://tio.run/##jZPfboMgFMbvfQpjssRaTAoqahhP0vWCWtuYdF0jLNnW@OzugLoe2ptpTgI/@L7D4U@TnppmHI@xIudVdzGJErfjRx9DM9xvd/K2ISkdxDlNhVqvV4mS@22idmvJxDDaSabVxs5OQtX36puErt1@XdvGtAfXDXX3066CWxDCZ/udcE1IOknc@MxsbrkR3auFooOc4bUH0TGOXg5hRKY02243C66fRsdR9G/5srJHh7eL9RiCwC7wXXWXGK/YULsXlGzIHIP4G@vnMUYykpOCcDSmqeT3nmHTTPdjh5lnoC6xmskcqbPpPNyP1Y4zyM1JhdWZp84nNXUVePp80lO3fm/1uSyQQ@E5zDvh1VF4TlBNRUpSY8dC1siRLxUtjg9@fKmM2tqe94fLCrmVzg3rHWFYUUqKFJXbd6x4IrryFPX9BJ/Oob6fInvcydreA9d1D8ZQAvcGbj6dL@FEGVAIzTyaAYXQmUdzoBA692gBFEIXHuVAITT3aAkUQpcerYBC6MqjNVAIXdtHMv4C" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu15" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> (<code>-ap</code>), 27 bytes</h1>
-
-<pre class="lang-perl prettyprint-override"><code>$_+=$x[$_]++*2for@F;$_=&quot;@F&quot;
-</code></pre>
-<p><a href="https://tio.run/##K0gtyjH9/18lXttWpSJaJT5WW1vLKC2/yMHNWiXeVsnBTen/fwMFAwVDBTD5L7@gJDM/r/i/bmIBAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu16" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 12 bytes</h1>
 <pre><code>ＩＥθ⁺Ｉι⊗№…θκι
