--- a/q/275700.html
+++ b/q/275700.html
@@ -41,6 +41,13 @@
 <pre><code>⊢⌷⍨2(⊂*+.×⊣⊥⍣¯1∘⍳*∘≢)⊣
 </code></pre>
 <p><a href="https://razetime.github.io/APLgolf/?h=e9Q3NTP/UdsEA64QIFn9qHcXkHrUtfhRd8ujrmYQX0ddQV3nUe/WWv1HvVMPrQCKKAB5QASi1B@1TVLXgIjtAqOtmrUKCgA&amp;c=e9S16FHP9ke9K4w0HnU1aWnrHZ7@qGvxo66lj3oXH1pv@KhjxqPezVogqnORJlAGAA&amp;f=K1F41DZBIU0hREE9TZ3LUMFIwUChREHd0NDA0ACIQEIGQEEUIQMFQ5AAiKsOAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+<pre><code>⊢⌷⍨2(⊂*+.×⊣⊥⍣¯1∘⍳*∘≢)⊣
+⊢⌷⍨  ⊂                  ⍝ s permutated by
+       +.×              ⍝ inner product between
+   2  *              ⊣  ⍝ [2^σ0 ... 2^σ(n-1)]
+   2      ⊣⊥⍣¯1∘⍳*∘≢ ⊣  ⍝ [0 ... 2^n-1] in base 2
+   2             *∘≢ ⊣  ⍝ 2^n, or 2^(length of σ)
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 14 bytes</h1>
 <p>Naive implementation. It takes <span class="math-container">\$\sigma\$</span> as a 0-indexed premutation vector.</p>
