--- a/q/275700.html
+++ b/q/275700.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>022</td><td>APLDyalog Unicode</td><td>240925T075554Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275770#275770">akamayu</a></td></tr>
+<tr d-ix="0"><td>012</td><td>APLDyalog Unicode</td><td>240925T075554Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275770#275770">akamayu</a></td></tr>
 <tr d-ix="1"><td>014</td><td>K ngn/k</td><td>240925T072158Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275769#275769">akamayu</a></td></tr>
 <tr d-ix="2"><td>007</td><td>Jelly</td><td>240923T011922Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275701#275701">Unrelate</a></td></tr>
 <tr d-ix="3"><td>006</td><td>Nekomata</td><td>240924T070755Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275738#275738">alephalp</a></td></tr>
@@ -36,18 +36,12 @@
 <tr d-ix="7"><td>113</td><td>Python3</td><td>240923T015712Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275702#275702">Ajax1234</a></td></tr>
 <tr d-ix="8"><td>016</td><td>Charcoal</td><td>240923T045516Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275704#275704">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>22 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
-<p>Naive implementation. It takes <span class="math-container">\$\sigma\$</span> as a 0-indexed premutation vector.</p>
-<pre><code>⊢⌷⍨2(⊂*+.×⊣⊥⍣¯1∘⍳*∘≢)⊣
+<div id="pu0" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup><strike>22</strike> 12 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<p>Same idea as @Albert.Lang's.</p>
+<pre><code>{∊⍺⍉⍵⍴⍨2⍨¨⍺}
 </code></pre>
-<p><a href="https://razetime.github.io/APLgolf/?h=e9Q3NTP/UdsEA64QIFn9qHcXkHrUtfhRd8ujrmYQX0ddQV3nUe/WWv1HvVMPrQCKKAB5QASi1B@1TVLXgIjtAqOtmrUKCgA&amp;c=e9S16FHP9ke9K4w0HnU1aWnrHZ7@qGvxo66lj3oXH1pv@KhjxqPezVogqnORJlAGAA&amp;f=K1F41DZBIU0hREE9TZ3LUMFIwUChREHd0NDA0ACIQEIGQEEUIQMFQ5AAiKsOAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
-<pre><code>⊢⌷⍨2(⊂*+.×⊣⊥⍣¯1∘⍳*∘≢)⊣
-⊢⌷⍨  ⊂                  ⍝ s permutated by
-       +.×              ⍝ inner product between
-   2  *              ⊣  ⍝ [2^σ0 ... 2^σ(n-1)]
-   2      ⊣⊥⍣¯1∘⍳*∘≢ ⊣  ⍝ [0 ... 2^n-1] in base 2
-   2             *∘≢ ⊣  ⍝ 2^n, or 2^(length of σ)
-</code></pre>
+<p><a href="https://razetime.github.io/APLgolf/?h=e9Q3NTP/UdsEA64QIFn9qHcXkHrUtfhRd8ujrmYQX0ddQV3nUe/WWv1HvVMPrQCKKAB5QASi1B@1TVLXgIjtAqOtmrUKCgA&amp;c=q37U0fWod9ej3s5HvVsf9W551LvCCIgPrQAK1gIA&amp;f=K1F41DZBIU0hREE9TZ3LUMFIwUChREHd0NDA0ACIQEIGQEEMIaAAiKvOBQQA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+<p><a href="https://razetime.github.io/APLgolf/?h=e9Q3NTP/UdsEA64QIFn9qHcXkHrUtfhRd8ujrmYQX0ddQV3nUe/WWv1HvVMPrQCKKAB5QASi1B@1TVLXgIjtAqOtmrUKCgA&amp;c=e9S16FHP9ke9K4w0HnU1aWnrHZ7@qGvxo66lj3oXH1pv@KhjxqPezVogqnORJlAGAA&amp;f=bY/NagIxFIX38xRnNz/qkORZ3ImCoxkttBkZI@JWQWzoQHd148ah0F0XXXTfPoDvcJ/EREdQx0Pg3pzc7yTRoPU7UrThp77HIcCg4XPOOLPLWcyaNxYDd4bb@p5HxQ5k9vT2S8WXCMgso0b8/0GmJPNJRfn3zWmzpeIncuV1H9qTWwi2XaImNzPFROYvM93XcohkceIquUvqwJNSMsckz4azgUYi9VxKdcEEEN0hpjxzHdE7rBjiOIbrAtXiYfeKq4Yff@kq5hJh@a59DJL@VELcBVWq0RZrIsttDZ6lGukxshSHVXgE&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf! 22bytes</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 14 bytes</h1>
 <p>Naive implementation. It takes <span class="math-container">\$\sigma\$</span> as a 0-indexed premutation vector.</p>
