--- a/q/275739.html
+++ b/q/275739.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>022</td><td>MathGolf</td><td>240925T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275772#275772">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>143</td><td>Bash</td><td>240924T090427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275744#275744">Themooni</a></td></tr>
-<tr d-ix="2"><td>092</td><td>C gcc</td><td>240924T152414Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275753#275753">Blue</a></td></tr>
-<tr d-ix="3"><td>024</td><td>Charcoal</td><td>240924T094825Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275747#275747">Neil</a></td></tr>
-<tr d-ix="4"><td>111</td><td>Nim</td><td>240925T030602Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275767#275767">Archar G</a></td></tr>
-<tr d-ix="5"><td>041</td><td>Uiua</td><td>240925T025223Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275766#275766">noodle p</a></td></tr>
-<tr d-ix="6"><td>137</td><td>C++ gcc</td><td>240924T140339Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275751#275751">SquareFi</a></td></tr>
+<tr d-ix="0"><td>136</td><td>C++ gcc</td><td>240924T140339Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275751#275751">SquareFi</a></td></tr>
+<tr d-ix="1"><td>022</td><td>MathGolf</td><td>240925T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275772#275772">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>143</td><td>Bash</td><td>240924T090427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275744#275744">Themooni</a></td></tr>
+<tr d-ix="3"><td>092</td><td>C gcc</td><td>240924T152414Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275753#275753">Blue</a></td></tr>
+<tr d-ix="4"><td>024</td><td>Charcoal</td><td>240924T094825Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275747#275747">Neil</a></td></tr>
+<tr d-ix="5"><td>111</td><td>Nim</td><td>240925T030602Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275767#275767">Archar G</a></td></tr>
+<tr d-ix="6"><td>041</td><td>Uiua</td><td>240925T025223Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275766#275766">noodle p</a></td></tr>
 <tr d-ix="7"><td>058</td><td>Perl 5</td><td>240924T180047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275759#275759">Xcali</a></td></tr>
 <tr d-ix="8"><td>080</td><td>vim</td><td>240924T211739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275761#275761">Ray</a></td></tr>
 <tr d-ix="9"><td>062</td><td>Bash</td><td>240924T170310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275756#275756">Digital </a></td></tr>
@@ -45,7 +45,19 @@
 <tr d-ix="16"><td>057</td><td>JavaScript Node.js</td><td>240924T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275740#275740">l4m2</a></td></tr>
 <tr d-ix="17"><td>038</td><td>Brachylog</td><td>240924T081621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275742#275742">Fatalize</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, 22 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C++ (gcc)</a>, <s>176</s> <s>137</s> 136 bytes</h1>
+
+<pre class="lang-cpp prettyprint-override"><code>#import&lt;cstdio&gt;
+f(){puts(&quot;#import&lt;cstdio&gt;\nf(unsigned x){&quot;);for(int i;printf(&quot;x-%u?:puts(\&quot;%s\&quot;);&quot;,i,i++&amp;1?&quot;even&quot;:&quot;odd&quot;),i;);puts(&quot;}&quot;);}
+</code></pre>
+<p><a href="https://tio.run/##XY7NDoIwEITvPgVZg2kDHLxSIy/ChfSHbCJt022RhPDq1qo3T5ud@XZmpffdLGXOZ1y8C/EmKSp095NhfPcpEoM/Z7SGJUs4W62qje/AhXGBoY0VCh/KNAy2rk5D/70foaaxQNBii01zuQ6gV22hB6cU8BYFF7@io1BH/gQtE9rSX34owkuaxzRT7ozXYUEiXHVZnmHy6xs" rel="nofollow noreferrer" title="C++ (gcc) – Try It Online">Try it online!</a></p>
+<p>The case when <code>i = 0</code> comes last.</p>
+<p>Uses <code>-fwrapv</code> flag for well-defined signed integer overflow wrapping (as opposed to the standard's undefined behaviour when overflowing).</p>
+<p>Uses <code>-fpermissive</code> flag to suppress errors from defining <code>f</code> without a type</p>
+<p>Thanks to Neil for suggesting changing <code>printf</code> to <code>puts</code>.</p>
+<p>Borrows from the <a href="https://codegolf.stackexchange.com/a/275753/119678">C (gcc) answer</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, 22 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>♥ór{&quot;]y=╛{♣A+╦╖8Çα§q}&quot;
 </code></pre>
 <p>(Will output nothing for undefined inputs - e.g. any negative integers; positive integers above 4294967295; or non-integer inputs.)</p>
@@ -83,7 +95,7 @@
 <li>†† With the <code>q</code>, it seems to think there is still a string on the stack when it does the <code>=</code>, even though the potential <code>&quot;even&quot;</code>/<code>&quot;odd&quot;</code> is within the if-statement block that it cannot reach during execution. Also, the <code>]y</code> would have already joined it together with the digits if that were the case anyway.. So not entirely sure why the <code>q</code> is necessary, but without it <a href="https://tio.run/##fdOhDQJBFIRhP60Qkp23t3d7AkEhCAwgIBgMIWgqWBJykgQ0LYCniG3koIE3@lfvy7zd8rBZ77ercQyL46yW4VRv9/mklkct1/y5fF/v55l@Mj9FPzV@Sn5q/dT5KfupFycrDuFBAUIhQkFCYUKBQqFCwULhYsLF1E6EiwkXEy4mXEy4mHAx4WLCJQqXKFz@fwfCENEgoUWHjB4MiMSUSOEH" rel="nofollow noreferrer">it'll give an error on all inputs in the range <code>[0,4294967294]</code> and will only succeed without errors for the max 4294967295 itself - or invalid inputs</a>.</li>
 </ul>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 143 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 143 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>c=echo
 $c case \$1 in
 paste &lt;($c &quot;`$c {1..4294967295..2}&quot;)$c odd;;
@@ -105,7 +117,7 @@ $c esac
 </code></pre>
 <p>Bash brace expansions (which is what {x..y..step} is) are applied to their surrounding string, so <code>a{b,c}</code> returns <code>ab ac</code>. we build an array of all odds and another of all evens, then we zip them by pasting one from each array, converting tabs to newlines, and repeating until both arrays are exhausted.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <strike>104</strike> 92 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <strike>104</strike> 92 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>f(i){puts(&quot;g(x){&quot;);for(;printf(&quot;x-%u?:puts(\&quot;%s\&quot;);&quot;,i,i--%2?&quot;even&quot;:&quot;odd&quot;),i-1;);puts(&quot;}&quot;);}
 </code></pre>
@@ -113,7 +125,7 @@ $c esac
 <p>-12 thanks to <a href="https://codegolf.stackexchange.com/users/11259/digital-trauma">Digital Trauma</a> and <a href="https://codegolf.stackexchange.com/users/119678/squarefinder">SquareFinder</a></p>
 <p><a href="https://tio.run/##LYy7CoUwEAV7v0IWArtgCi3dwh@xkcTIFibiCyHk23PD1VPOGcboxZicHQrF7ToPhAUfikDswo687eJPh/BodQ39XxhBHWP5oZFGtFbdAPM9e@ghWAtUWMvEbysVL@WSqNdJPN5BLMWq/uaQuEr5Bw" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>27</s> <s>26</s> 24 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>27</s> <s>26</s> 24 bytes</h1>
 <pre><code>ＦＸχχ«´¿´⁼Ｉι´θ§⪪evenodd⁴ι
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6Fjfz0_KLFDQC8stTizQMDXQUjDQ1Faq5OAOKMvNKNJQO7X_UuEdJ0xom4JxYXKKRqYkQUDq3A0nascQzLyW1QiO4ICcTKJdalpqXn5KipKNgoqmjANZWu6Q4KbkYavnyaCXdshylWCgXAA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code and only goes up to 100 (the default interpreter can't actually handle deeply nested if statements anyway). The resulting program has no header but technically has a footer for the purposes of the question. Explanation:</p>
@@ -137,7 +149,7 @@ $c esac
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=VdQ9SoNBEAbgxpPYC9n_3bOIRUwiFmLAqL3nsImg4hFSCIIHsBZLTyKokOfrZt_mYXdn5v5lcT6_WqznF9vt08312VH_Ovh8f_u-e5197Fa3q8vfOnzs1svlbxmJ0z7OxGUfV-K2jzvx2MdhYoIG1QAbdANwUA7QQTuAR_HojcUjeBSP4FE8gkfxCJ7EE3iavDd4Ek_gSTyBJ_EEnsUzeBbP_rZ4Bs_iGTyLZ_AiXsCLeAEvk14DL-IFvIgX8Cpewat4Ba_i1U4Xr-BVvII38QbexBt4E2_gbTJn4E28gXfxDt7FO3gX7-BdvDvl4h18iA_wIT7Ah_gAH-IDfEx2zB_-uDldbP7X3PPx4dH88ORh9nf8AQ" rel="nofollow noreferrer">Attempt This Online!</a> Link only goes up to 100 and includes AST for convenience. Explanation: See generator for what the individual characters mean.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://nim-lang.org" rel="nofollow noreferrer">Nim</a>, 111 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://nim-lang.org" rel="nofollow noreferrer">Nim</a>, 111 bytes</h1>
 <pre class="lang-nim prettyprint-override"><code>echo&quot;proc(n:int)=echo(case n&quot;
 for i in 0..4294967295:echo &quot;of &quot;,i,&quot;:&quot;,repr [&quot;even&quot;,&quot;odd&quot;][i%%2]
 echo&quot;else: $0)&quot;
@@ -155,7 +167,7 @@ of 4294967295:&quot;odd&quot;
 else: $0)
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1>Uiua, 41 bytes</h1>
+<div id="pu6" class="pu"><h1>Uiua, 41 bytes</h1>
 <pre><code>&amp;p@)⍥(&amp;p$ |&quot;odd&quot;|&quot;even&quot;
 )ⁿ5 2&amp;p$ ⨬(&quot;even&quot;
 </code></pre>
@@ -171,17 +183,6 @@ else: $0)
 )
 </code></pre>
 <p><a href="https://uiua.org/docs/switch" rel="nofollow noreferrer"><code>⨬ - switch</code></a>, when given N, runs the code in its Nth branch.</p>
-</div>
-<div id="pu6" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C++ (gcc)</a>, <s>176</s> 137 bytes</h1>
-
-<pre class="lang-cpp prettyprint-override"><code>#import&lt;cstdio&gt;
-int i;f(){puts(&quot;#import&lt;cstdio&gt;\nf(unsigned x){&quot;);for(;printf(&quot;x-%u?:puts(\&quot;%s\&quot;);&quot;,i,i++&amp;1?&quot;even&quot;:&quot;odd&quot;),i;);puts(&quot;}&quot;);}
-</code></pre>
-<p><a href="https://tio.run/##XY3JDoIwFEX3fgV5BtMGWLilRn6EDelAXiLtSwckIfy6terO5R1OjiTqZilzPuNCzsebDFGhu5/QxgqFYXynFAODv320hiUbcLZaVRvfgQvjPBPkC2gYbF2dhv6LjlCHsezQYotNc7kOoFdtoQenFPAWBRc/x1FeR/6YlwltURd9KV7SPKY55M6Q9guGgKsu4eknWt8" rel="nofollow noreferrer" title="C++ (gcc) – Try It Online">Try it online!</a></p>
-<p>Uses <code>-fwrapv</code> flag for well-defined signed integer overflow wrapping (as opposed to the standard's undefined behaviour when overflowing).</p>
-<p>Uses <code>-fpermissive</code> flag to suppress errors from defining <code>f</code> without a type</p>
-<p>Thanks to Neil for suggesting changing <code>printf</code> to <code>puts</code>.</p>
-<p>Borrows from the <a href="https://codegolf.stackexchange.com/a/275753/119678">C (gcc) answer</a>.</p>
 </div>
 <div id="pu7" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 58 bytes</h1>
 
@@ -283,11 +284,11 @@ $f even
 </code></pre>
 <p><a href="https://tio.run/##S0oszvj/P81WXUNDxVBXNUVTs6YmNTkjX50rLb9IQyPT1khLy9DIOlNX11pTs1qhoCgzryRNQUklTSE/JYULSKWWpeZxKSmoZCqoROvqZsZa1/7/DwA" rel="noreferrer">Try it online!</a></p>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 70 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="noreferrer">Python 3</a>, 70 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>print(&quot;def f(n):f&quot;,*range(2**33),sep=&quot;==n==print('eovdedn'[n&amp;1::2]);&quot;)
 </code></pre>
-<p><a href="https://tio.run/##fdCxDsIgFIXhnacgDJZLOliw1WB4EuNgwkW7XAg2Jj49NmFwu/N3zvKX7/bK5C6ltlbqSptWEZNMmsAnNZr6oCdqa4yD8Y0lqBAohL4cMH8iRhpudJi8t3e4Kmj/Oz898jzxbHl2PJ94nnleeD4LITqCSLlKkivJ3nHeq@xp2g8" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online (with <code>2**3</code> in place of <code>2**33</code>)</a></p>
+<p><a href="https://tio.run/##fdCxDsIgFIXhnacgDJZLOliw1WB4EuNgwkW7XAg2Jj49NmFwu/N3zvKX7/bK5C6ltlbqSptWEZNMmsAnNZr6oCdqa4yD8Y0lqBAohL4cMH8iRhpudJi8t3e4Kmj/Oz898jzxbHl2PJ94nnleeD4LITqCSLlKkivJ3nHeq@xp2g8" rel="noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online (with <code>2**3</code> in place of <code>2**33</code>)</a></p>
 <p>If it's OK for the function to error out after printing, 1 byte can be saved by writing <code>&lt;print(...)</code> in place of <code>==print(...)</code>.</p>
 </div>
 <div id="pu11" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 18 </s> 16 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
